--- a/products/templates/soon_page.html
+++ b/products/templates/soon_page.html
@@ -7,6 +7,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <link rel="icon" href="{% static 'images/fav.svg' %}" sizes="76*76" type="image/svg+xml">
         <link href="{% static 'css/error-page.css' %}" rel="stylesheet"/>
+        <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet"/>
 
         <link href="{% static 'awesome-css/duotone.min.css' %}" rel="stylesheet"/>
         <link href="{% static 'awesome-css/fontawesome.min.css' %}" rel="stylesheet"/>
