--- a/products/templates/l-pages/patterns/base.html
+++ b/products/templates/l-pages/patterns/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="var(--secondary-color)">
     <title>{% block title %}{% endblock %}</title>
     <link id="themeStylesheet" rel="stylesheet" href="{% static 'css/root/light-root.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="{% static 'css/login-styles.css' %}">
