--- a/products/templates/patterns/base.html
+++ b/products/templates/patterns/base.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="var(--secondary-color)">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <title>{% block title %}{% endblock %}</title>
         {% block head %}{% endblock %}
