--- a/products/templates/soon_page.html
+++ b/products/templates/soon_page.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <meta name="theme-color" content="var(--secondary-color)">
         <link rel="icon" href="{% static 'images/fav.svg' %}" sizes="76*76" type="image/svg+xml">
         <link href="{% static 'css/error-page.css' %}" rel="stylesheet"/>
         <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet"/>
