add meta discription tag
meta discription tag added for all pages

--- a/products/templates/about_us.html
+++ b/products/templates/about_us.html
@@ -1,5 +1,6 @@
 {% extends 'patterns/base.html' %}
 {% load static %}
+{% block meta %}پستینا پلیه بین کشاورز و مصرف‌کننده؛ بدون واسطه‌های اضافه، بدون قیمت‌های ناعادلانه. ما پسته رو مستقیم از دل باغ‌های ایران، با همان کیفیت اصلی، به دست شما می‌رسونیم{% endblock %}
 {% block title %}درباره پستینا{% endblock title %}
 {% block typebody %}<body dir="rtl" id="top" style="text-align: right;">{% endblock %}
 
@@ -440,7 +441,7 @@
         </div>
     </section>-->
     
-    <section class="contact-section section-padding section-bg" id="section_3">
+    <section class="mt-5 contact-section section-padding section-bg" id="section_3">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-12 text-center">
