--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'patterns/base.html' %}
 {% load static %}
 
+{% block meta %}
+     پستینا بازار تخصصی خرید و فروش پسته بهترین قیمت و کیفیت با خرید مستقیم پسته از کشاورز.
+{% endblock %}
+
 {% block title %}
     Pestina | پستینا
 {% endblock title %}
