--- a/products/templates/l-pages/login.html
+++ b/products/templates/l-pages/login.html
@@ -1,5 +1,6 @@
 {% extends 'l-pages/patterns/base.html' %}
 {% load static %}
+{% block meta %}ورود به پستینا - فروش پسته در پستینا{% endblock %}
 {% block title %}ورود به پستینا{% endblock title %}
 {% block content %}
     <div class="container">
