--- a/products/templates/l-pages/signup.html
+++ b/products/templates/l-pages/signup.html
@@ -1,4 +1,5 @@
 {% extends 'l-pages/patterns/base.html' %}
+{% block meta %}پستینا - ساخت حساب کاربری فروش پسته در پستینا{% endblock %}
 {% block title %}ساخت حساب کاربری - پستینا{% endblock title %}
 {% block content %}
     <div class="container">
