--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,5 +1,6 @@
 {% extends 'patterns/base.html' %}
 {% load static %}
+{% block meta %}لیست محصولات پستینا - خرید پسته های با کیفیت و درجه یک از کشاورزان سراسر کشور{% endblock %}
 {% load custom_filters %}
 
 {% block title %}لیست محصولات{% endblock title %}
