--- a/products/templates/send_ticket.html
+++ b/products/templates/send_ticket.html
@@ -1,5 +1,5 @@
 {% extends 'patterns/base.html' %}
-
+{% block meta %}ارتباط با پشتیبانی - گزارش نقص فنی در پستینا{% endblock %}
 {% block title %}ارتباط با پشتیبانی{% endblock title %}
 
 {% block typebody %}
