--- a/products/templates/soon_page.html
+++ b/products/templates/soon_page.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% block meta %}به زودی - این صفحه هنوز آماده نیست{% endblock %}
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
