--- a/products/templates/l-pages/forgot-pass.html
+++ b/products/templates/l-pages/forgot-pass.html
@@ -1,4 +1,5 @@
 {% extends 'l-pages/patterns/base.html' %}
+{% block meta %}پستینا - بازیابی رمز عبور{% enblock %}
 {% block title %}بازیابی رمز عبور{% endblock title %}
 {% block content %}
     <div class="container">
