--- a/products/templates/patterns/base.html
+++ b/products/templates/patterns/base.html
@@ -3,6 +3,7 @@
 <html dir="rtl" lang="fa">
     <head>
         <meta charset="utf-8"/>
+        <meta name="description" content="{% block meta %}{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="var(--secondary-color)">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
