--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -137,7 +137,10 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-lg-5 col-12">
-                    <img class="img-fluid" src="{% static 'images/faq_graphic.jpg' %}" alt="FAQs" />
+                    <img class="themed-image img-fluid" src="{% static 'images/light/faq-light.svg' %}" alt="پستینا" 
+                        data-light = "{% static 'images/light/faq-light.svg' %}"
+                        data-light2 = "{% static 'images/light-2/faq-light-2.svg' %}"
+                        data-dark = "{% static 'images/dark/faq-dark.svg' %}" />
                 </div>
                 <div class="col-lg-6 col-12 m-auto">
                     <div class="accordion" id="accordionExample">
