--- a/products/templates/patterns/footer.html
+++ b/products/templates/patterns/footer.html
@@ -6,7 +6,10 @@
 
             <div class="col-lg-3 col-12 mb-4 pb-2">
                 <a class="navbar-brand mb-2" href="index.html">
-                    <img src="{% static 'images/light-logo.svg' %}" alt="پستینا" style="width: 130px ;height: auto;"/>
+                        <img class="themed-image" src="{% static 'images/light/light-logo.svg' %}" alt="پستینا" style="width: 130px ;height: auto;"
+                        data-light = "{% static 'images/light/light-logo.svg' %}"
+                        data-light2 = "{% static 'images/light-2/light-logo-2.svg' %}"
+                        data-dark = "{% static 'images/dark/dark-logo.svg' %}" />
                 </a>
             </div>
 
