--- a/products/templates/l-pages/patterns/base.html
+++ b/products/templates/l-pages/patterns/base.html
@@ -3,6 +3,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="{% block meta %}{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="var(--secondary-color)">
     <title>{% block title %}{% endblock %}</title>
