--- a/products/templates/patterns/base.html
+++ b/products/templates/patterns/base.html
@@ -48,7 +48,10 @@
             <div class="container">
                 
                 <a class="navbar-brand" href="#">
-                    <img src="{% static 'images/light-logo.svg' %}" alt="پستینا" style="width: 113px ;height: auto;"/>
+                    <img class="themed-image" src="{% static 'images/light/light-logo.svg' %}" alt="پستینا" style="width: 113px ;height: auto;"
+                        data-light = "{% static 'images/light/light-logo.svg' %}"
+                        data-light2 = "{% static 'images/light-2/light-logo-2.svg' %}"
+                        data-dark = "{% static 'images/dark/dark-logo.svg' %}" />
                 </a>
 
                 <div class="d-lg-none ms-auto me-4" style="display: flex;align-items:center;">
