--- a/products/static/css/main-styles.css
+++ b/products/static/css/main-styles.css
@@ -178,7 +178,7 @@ strong {
 }
 
 .section-overlay {
-  background-image: linear-gradient(10deg, var( --primary-color) 0%, var(--secondary-color) 80%);
+  background-image: linear-gradient(40deg, var(--primary-color) -10%, var(--secondary-color) 100%);
   position: absolute;
   top: 0;
   right: 0;
@@ -187,6 +187,7 @@ strong {
   height: 100%;
   opacity: 0.7;
 }
+
 
 .section-overlay + .container {
   position: relative;
@@ -775,7 +776,7 @@ blockquote {
   TIMELINE              
 -----------------------------------------*/
 .timeline-section {
-  background-image: url('../images/colleagues-working-cozy-office-medium-shot.jpg');
+  background-image: url('../images/index-bg.webp');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
