--- a/products/static/css/product-card.css
+++ b/products/static/css/product-card.css
@@ -14,7 +14,7 @@
 
 .p-card-body {
   /* background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
-  background : --section-gb-color;
+  background : var(--section-gb-color);
   padding: 40px 20px;
   min-height: 80vh;
 }
@@ -28,7 +28,7 @@
 }
 
 .product-card {
-  background-color: white;
+  background-color: var(--section-gb-color);
   border-radius: var(--border-radius-medium);
   overflow: hidden;
   box-shadow: var(--shadow);
@@ -106,12 +106,12 @@
   font-size: var(--btn-font-size);
   font-weight: var(--font-weight-semibold);
   transition: var(--transition);
-  box-shadow: 0 4px 15px rgba(106, 17, 203, 0.3);
+  box-shadow: 0 4px 15px  rgb(73, 73, 73);
 }
 
 .order-btn:hover {
   transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(106, 17, 203, 0.4);
+  box-shadow: 0 6px 20px rgb(73, 73, 73);
   background: var(--primary-color);
 }
 
@@ -120,7 +120,7 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  background: rgba(255,255,255,0.9);
+  background: var(--section-gb-color);
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
   padding: 6px 10px;
@@ -185,7 +185,7 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: var(--section-gb-color);
   padding: 25px;
   overflow-y: auto;
   overflow-x: hidden;
@@ -245,7 +245,6 @@
   pointer-events: none;
 }
 
-/* استایل‌های ریسپانسیو */
 @media (max-width: 1200px) {
   .products-container {
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
