--- a/products/templates/buy_product.html
+++ b/products/templates/buy_product.html
@@ -76,6 +76,7 @@
                                     {% if p.show_inventory %}
                                     <li>مقدار موجود : {{ p.inventory | format_weight}}</li>
                                     {% endif %}
+                                    <li>قیمت هر کیلوگرم محصول : {{p.price | format_toman}}</li>
                                     {% if p.discription %}
                                     <li>توضیحات محصول : {{p.discription}}</li>
                                     {% endif %}        
@@ -120,7 +121,7 @@
                             <div class="row" style="justify-content:center;">
                                 <div class="col-lg-12 col-12">
                                     <div class="form-floating">
-                                        <input type="number" id="weightInput" min="0" step="0.2" name="quantity" class="form-control" placeholder="gain" required
+                                        <input type="number" step="0.1" id="weightInput" name="quantity" class="form-control" placeholder="gain" required
                                             {% if form.gain_product.value %} value="{{ form.gain_product.value }}" {% endif %} />
                                         <label for="weightInput">وزن محصول (برحسب کیلوگرم)</label>
                                     </div>
