--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -16,7 +16,7 @@
 {% block navitem %}
     <ul class="navbar-nav ms-lg-5 me-lg-auto">
         <li class="nav-item">
-            <a class="nav-link click-scroll" href="{% url 'home' %}">
+            <a class="nav-link click-scroll" href="#">
                 <strong><span style="font-size:var(--menu-font-size);">
                     <i class="fa-duotone fa-solid fa-house"></i>
                 </span>خانه</strong>
@@ -101,7 +101,7 @@
                 <div class="col-lg-6 col-12">
                     <div class="custom-block custom-block-overlay">
                         <div class="d-flex flex-column h-100">
-                            <img class="custom-block-image img-fluid" src="{% static 'images/pistachio-cart.jpg' %}" alt="" />
+                            <img class="custom-block-image img-fluid" src="{% static 'images/pistachio_cart.webp' %}" alt="section-bg" loading="lazy" />
                             <div class="custom-block-overlay-text d-flex home-cart">
                                 <h5 class="text-white mb-2">همین حالا شروع کنید</h5>
                                 <div>
@@ -111,7 +111,6 @@
                                         </span>خرید پسته
                                     </a>
                                     <a class="btn custom-btn custom-border-btn ms-3 cs-btn" href="{% url 'dashboard' %}">
-                                        <i class="fa-duotone fa-solid fa-money-bill-wave"></i>
                                         فروش پسته در پستینا
                                     </a>
                                 </div>
@@ -140,7 +139,8 @@
                     <img class="themed-image img-fluid" src="{% static 'images/light/faq-light.svg' %}" alt="پستینا" 
                         data-light = "{% static 'images/light/faq-light.svg' %}"
                         data-light2 = "{% static 'images/light-2/faq-light-2.svg' %}"
-                        data-dark = "{% static 'images/dark/faq-dark.svg' %}" />
+                        data-dark = "{% static 'images/dark/faq-dark.svg' %}" 
+                        loading="lazy"/>
                 </div>
                 <div class="col-lg-6 col-12 m-auto">
                     <div class="accordion" id="accordionExample">
@@ -174,7 +174,7 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                     <i class="fa-solid fa-duotone fa-clock"></i>&nbsp;
-                                    مدت زمان دریافت محصول چقدر است ؟
+                                    مدت دریافت محصول چقدر است ؟
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
