--- a/products/templates/registered_order.html
+++ b/products/templates/registered_order.html
@@ -1,8 +1,11 @@
 {% extends 'patterns/base.html' %}
+{% load static %}
+{% load custom_filters %}
+ 
 {% block title %}ثبت سفارش موفقیت آمیز بود{% endblock title %}
 {% block typebody %}<body class="topics-listing-page" dir="rtl" id="top" style="text-align: right;">{% endblock %}
-{% block navitem %}
-    <ul class="navbar-nav ms-lg-5 me-lg-auto">
+    {% block navitem %}
+        <ul class="navbar-nav ms-lg-5 me-lg-auto">
         <li class="nav-item">
             <a class="nav-link click-scroll" href="{% url 'products' %}">
                 <strong><span style="font-size:var(--menu-font-size);">
@@ -39,35 +42,77 @@
             </a>
         </li>
     </ul>
-{% endblock navitem %}
+    {% endblock navitem %}
 {% block header %}
-<header class="site-header d-flex flex-column justify-content-center align-items-center" style="text-align: center;">
-<div class="container">
-<div class="row align-items-center">
-<div class="col-lg-5 col-12" style="width:100%;">
-<h2 class="text-white">{{name}} عزیز درخواست شما با شماره {{order_number}} ثبت شد</h2>
-</div>
-</div>
-</div>
+<header class="site-header d-flex flex-column justify-content-center align-items-center">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-7 col-12">
+                <h2 class="text-white">محصولات /  پسته {{p.get_kind_display}} {{p.get_status_display}} {{p.get_quality_display}}</h2>
+            </div>
+        </div>
+    </div>
 </header>
 {% endblock header %}
 {% block content %}
-<section class="section-padding section-bg" style="text-align: center;justify-content: center;">
-    <div class="container">
-
-            <div class="row">
-            <div class="col-lg-12 col-12">
-                <h5 class="mb-4" style="width: auto;line-height:50px;"> در صورت نیاز همکاران ما با شماره {{buyer_phone}} تماس خواهند گرفت <br/>در صورت نادرست بودن شماره لطفا  درخواست خود را مجدد ثبت نمایید .</h5>
-                <div class="col-12 text-center mt-5">
-                
-                  <a class="btn custom-btn custom-border-btn ms-3" href="{% url 'home' %}">بازگشت به برگه نخست </a>
-                 
+        <section class="section-padding section-bg">
+            <div class="container">
+                <div class="row" style="flex-direction: row-reverse;">
+                    <div class="col-lg-12 col-12 mb-2 text-center">
+                        <h4 >{{name}} عزیز پیش سفارش شما با شماره {{order_number}} ثبت شد</h4>
                     </div>
-            
-            </div>
 
-</div>
-</div>
-</section>
-</main>
-{% endblock content %}
+                    <div class="col-lg-5 col-12 mx-auto">
+                        <div class="product-box" style="padding: 9px;">
+                            <div>
+                                <ul>
+                                    <p><b>محصول</b></p>
+                                    <li><a href="{% url 'buy-product' p.id %}">پسته {{p.get_kind_display}}
+                                        {{ p.get_status_display }}
+                                        {{ p.get_quality_display }}
+                                        با انس {{ p.ounce }} 
+                                    </li></a>
+                                    
+                         
+                                    <p><b>توضیحات سفارش محصول</b></p>
+                                    <li>
+                                       شماره سفارش : {{order_number}} 
+                                    </li>
+                          
+                                    <li>
+                                        تحویل گیرنده : {{name}}
+                                    </li>
+                         
+                                    <li>
+                                        مقدار سفارش داده شده : {{gain | format_weight}}
+                                    </li>
+
+                                    <li>
+                                        کد پستی : {{post_code}}
+                                    </li>
+
+                                    <li>
+                                        آدرس ارسال : {{address}}
+                                    </li>
+                        
+                                    <li><b>
+                                        قابل پرداخت :  {{aprice | format_toman}}
+                                    </b></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <p class="mt-4 text-center"><b>در صورت هرگونه مغایرت در اطلاعات وارد شده تیکت خود را از منوی پایین ثبت نمایید همکاران ما جهت ارسال سفارش و دریافت هزینه با شما تماس خواهند گرفت</b></p>
+                        <p class="mt-2 mb-2 text-center">از این صفحه اسکرین شات بگیرید با رفرش صفحه به برگه نخست باز میگردید</p>
+                        <div class="col-12 text-center mt-4">
+                            <a class="btn custom-btn custom-border-btn ms-3"  href="{% url 'products' %}"><i class="fa-duotone fa-solid fa-backward"></i>&nbsp;بازگشت به برگه نخست</a>
+                        </div>
+                        <div class="col-12 text-center mt-2">
+                            <a class="btn custom-btn custom-border-btn cs-btn ms-3" href="{% url 'send-ticket' 'technical' %}"><i class="fa-solid fa-duotone fa-phone-alt"></i>&nbsp;ارتباط با پشتیبانی</a>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+{% endblock %}
