--- a/products/static/css/root/light-root.css
+++ b/products/static/css/root/light-root.css
@@ -1,6 +1,6 @@
 :root {
-    --white-color:                  #ffffff;
-    --dark-color:                   #000000;
+    --white-color:                  #ebe1e1;
+    --dark-color:                   #0e0e0ef1;
     
     --primary-color:                #123524;
     --custom-btn-bg-hover-color:    #123524;
