Add resume model and cards in about us
add some plugin for adding and edit resume

--- a/products/static/css/main-styles.css
+++ b/products/static/css/main-styles.css
@@ -1315,6 +1315,12 @@ blockquote {
   .custom-block{
     height: auto;
   }
+  .social-h{
+    height: 38vh;
+  }
+  .social-share{
+    padding: 20px 30px;
+  }
   img {
     max-width: 100%; /* Ensure images don't exceed the screen width */
     height: auto;
