--- a/products/static/css/root/light-root.css
+++ b/products/static/css/root/light-root.css
@@ -1,5 +1,5 @@
 :root {
-    --white-color:                  #fafafa;
+    --white-color:                  #ffffff;
     --dark-color:                   #0e0e0ef1;
     
     --primary-color:                #123524;
@@ -9,7 +9,7 @@
     --secondary-color:              #85A947;
     --custom-btn-bg-color:          #85A947;
   
-    --section-bg-color:             #dce6cc;
+    --section-bg-color:             #dae9c3;
   
     --p-color:                      #333;
   
