--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -1,9 +1,7 @@
 {% extends 'patterns/base.html' %}
 {% load static %}
 
-{% block meta %}
-     پستینا بازار تخصصی خرید و فروش پسته بهترین قیمت و کیفیت با خرید مستقیم پسته از کشاورز.
-{% endblock %}
+{% block meta %}پستینا بازار تخصصی خرید و فروش پسته ؛ بهترین قیمت ، بهترین کیفیت ، خرید مستقیم پسته از کشاورزان رفسنجان و سرتاسر کشور .{% endblock %}
 
 {% block title %}
     Pestina | پستینا
