--- a/products/static/css/root/light-root-2.css
+++ b/products/static/css/root/light-root-2.css
@@ -8,7 +8,7 @@
     --custom-btn-bg-color:          #5fbdb2;
     --section-bg-color:             #f0f8ff;
     --p-color:                      #717275;
-    --border-color:                 #7fffd4;
+    --border-color:                 #b3dad4;
     
     --body-font-family:             'vazir', vazir;
     --title-font-family:            'vazir', vazir;
