--- a/products/templates/about_us.html
+++ b/products/templates/about_us.html
@@ -1,7 +1,7 @@
 {% extends 'patterns/base.html' %}
 {% load static %}
 {% block meta %}پستینا پلیه بین کشاورز و مصرف‌کننده؛ بدون واسطه‌های اضافه، بدون قیمت‌های ناعادلانه. ما پسته رو مستقیم از دل باغ‌های ایران، با همان کیفیت اصلی، به دست شما می‌رسونیم{% endblock %}
-{% block title %}درباره پستینا{% endblock title %}
+{% block title %}درباره پستینا | حذف واسطه ها برای عرضه پسته با کیفیت رفسنجان و ایران{% endblock title %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/resume-card.css' %}" />
 {% endblock %}
