--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -3,9 +3,7 @@
 
 {% block meta %}پستینا بازار تخصصی خرید و فروش پسته ؛ بهترین قیمت ، بهترین کیفیت ، خرید مستقیم پسته از کشاورزان رفسنجان و سرتاسر کشور .{% endblock %}
 
-{% block title %}
-    Pestina | پستینا
-{% endblock title %}
+{% block title %}خرید و فروش پسته به صورت آنلاین | پستینا {% endblock title %}
 
 {% block typebody %}
     <body dir="rtl" id="top" style="text-align: right;">
