--- a/static/css/root/light-root.css
+++ b/static/css/root/light-root.css
@@ -1,5 +1,5 @@
 :root {
-    --white-color:                  #ebe1e1;
+    --white-color:                  #ffffff;
     --dark-color:                   #0e0e0ef1;
     
     --primary-color:                #123524;
@@ -9,7 +9,7 @@
     --secondary-color:              #85A947;
     --custom-btn-bg-color:          #85A947;
   
-    --section-bg-color:             #d5e6ba;
+    --section-bg-color:             #dae9c3;
   
     --p-color:                      #333;
   
