--- a/products/templates/patterns/base.html
+++ b/products/templates/patterns/base.html
@@ -3,46 +3,49 @@
 <html dir="rtl" lang="fa">
     <head>
         <meta charset="utf-8"/>
-        <meta name="description" content="{% block meta %}{% endblock %}">
+        <meta name="description" content="{% if seo_description %}{{seo_description}}{% else %}{% block meta %}{% endblock %}{% endif %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="var(--secondary-color)">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <title>{% block title %}{% endblock %}</title>
+        <title>{% if seo_title %}{{seo_title}}{% else %}{% block title %}{% endblock %}{% endif %}</title>
         {% block head %}{% endblock %}
-        <!-- Link Fonts  -->
-        <!-- <link href="https://fonts.googleapis.com" rel="preconnect"/> -->
-        <!-- <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/> -->
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&amp;family=Open+Sans&amp;display=swap" rel="stylesheet"/> -->
-        <!-- CSS FILES -->
+
         <link id="themeStylesheet" rel="stylesheet" href="{% static 'css/root/light-root.css' %}" rel="stylesheet"/>
 
-        <link rel="icon" href="{% static 'images/fav.svg' %}" sizes="76*76" type="image/svg+xml">
+        <link href="{% static 'css/loading.css' %}" rel="stylesheet"/>
+        <link rel="icon" href="{% static 'images/fav.svg' %}" type="image/svg+xml">
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"/>
-        <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet"/>
         <link href="{% static 'css/main-styles.css' %}" rel="stylesheet"/>
         <link href="{% static 'awesome-css/duotone.min.css' %}" rel="stylesheet"/>
         <link href="{% static 'awesome-css/fontawesome.min.css' %}" rel="stylesheet"/>
         <link href="{% static 'awesome-css/brands.css' %}" rel="stylesheet"/>
+        <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet"/>
 
 
 
         <!-- JAVASCRIPT FILES -->
-        <script src="{% static 'js/jquery.min.js' %}"></script>
-        <script src="{% static 'js/click-scroll.js' %}"></script>
-        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-        <script src="{% static 'js/jquery.sticky.js' %}"></script>
-        <script src="{% static 'js/custom.js' %}"></script>
+        <script src="{% static 'js/loading.js' %}"></script>
         <script src="{% static 'js/theme-toggle.js' %}" defer></script>
-        <!-- <script src="https://kit.fontawesome.com/b72411cf98.js" crossorigin="anonymous"></script> -->
-        <!-- <script src="{% static 'awesome-js/all.min.js' %}" defer></script> -->
-        <!-- <script src="{% static 'awesome-js/duotone.min.js' %}" defer></script> -->
-        <!-- <script src="{% static 'awesome-js/sharp-duotone-solid.min.js' %}" defer></script> -->
+        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'js/custom.js' %}"></script>
+        <script src="{% static 'js/click-scroll.js' %}"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/jquery.sticky.js' %}"></script>
          
         {% block script %}{% endblock %}
     </head>
 
     <!-- body -->
     {% block typebody %}{% endblock %}
+    <div id="loader-wrapper">
+        <div id="loader-content">
+                    <img id="loader-logo" class="themed-image" src="{% static 'images/light/light-logo.svg' %}" alt="پستینا" style="width: 113px ;height: auto;"
+                        data-light = "{% static 'images/light/light-logo.svg' %}"
+                        data-light2 = "{% static 'images/light-2/light-logo-2.svg' %}"
+                        data-dark = "{% static 'images/dark/dark-logo.svg' %}" />
+            <div class="spinner-line"></div>
+        </div>
+    </div>
     <main>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
@@ -72,15 +75,15 @@
                         <a class="navbar-icon bi-person smoothscroll" href="{% url 'login' %}"></a>
                     </div>
                     {% if user.is_authenticated %}
-                    <h6 class="login-text" id="main"><a href="{% url 'login' %}">{{user.first_name}} {{user.last_name}}</a></h6>
+                        <h6 class="login-text" id="main"><a href="{% url 'login' %}">{{user.first_name}} {{user.last_name}}</a></h6>
                     {% else %}
-                    <h6 class="login-text" id="main"><a href="{% url 'login' %}">ورود   | ثبت نام</a></h6>
+                        <h6 class="login-text" id="main"><a href="{% url 'login' %}">ورود   | ثبت نام</a></h6>
                     {% endif %}
                 </div>
             </div>
         </nav>
-    {% block header %}{% endblock %}
-    {% block content %}{% endblock %}
-    {% include "patterns/footer.html" %}
+        {% block header %}{% endblock %}
+        {% block content %}{% endblock %}
+        {% include "patterns/footer.html" %}
     </body>
 </html>
