--- a/static/css/main-styles.css
+++ b/static/css/main-styles.css
@@ -173,6 +173,11 @@ strong {
   padding-bottom: 100px;
 }
 
+.section-blog{
+  padding-top: 45px;
+  padding-bottom: 50px;
+}
+
 .section-bg {
   background-color: var(--section-bg-color);
 }
@@ -281,7 +286,7 @@ strong {
   SITE HEADER              
 -----------------------------------------*/
 .site-header {
-  background-image: linear-gradient(0deg, var( --primary-color) 0%, var(--secondary-color) 80%);
+  background-image: linear-gradient(10deg, var( --primary-color) 0%, var(--secondary-color) 80%);
   padding-top: 150px;
   padding-bottom: 80px;
 }
@@ -518,7 +523,7 @@ strong {
   HERO        
 -----------------------------------------*/
 .hero-section {
-  background-image: linear-gradient(10deg, var( --primary-color) 0%, var(--secondary-color) 80%);
+  background-image: linear-gradient(5deg, var( --primary-color) 0%, var(--secondary-color) 80%);
   position: relative;
   overflow: hidden;
   padding-top: 150px;
@@ -708,12 +713,12 @@ blockquote {
   background-color: var(--section-bg-color);
   border-radius: var(--border-radius-small);
   font-family: var(--title-font-family);
-  font-size: var(--h4-font-size);
+  font-size: var(--h5-font-size);
   font-weight: var(--font-weight-bold);
   display: inline-block;
-  text-align:right;
-  margin-top: 30px;
-  padding: 40px;
+  text-align:center;
+  margin-top: 20px;
+  padding: 30px;
 }
 
 .topics-listing-page .site-header {
@@ -1211,6 +1216,10 @@ blockquote {
     padding-top: 50px;
     padding-bottom: 50px;
   }
+  .section-blog{
+    padding-top: 25px;
+    padding-bottom: 30px;
+  }
   
   .navbar {
     background-color: var(--secondary-color);
@@ -1251,6 +1260,7 @@ blockquote {
   }
 
   .custom-block-topics-listing .custom-block-image {
+    margin-top:auto;
     width: auto;
   }
 
@@ -1304,6 +1314,12 @@ blockquote {
   }
   .custom-block{
     height: auto;
+  }
+  .social-h{
+    height: 38vh;
+  }
+  .social-share{
+    padding: 20px 30px;
   }
   img {
     max-width: 100%; /* Ensure images don't exceed the screen width */
