--- a/static/css/product-card.css
+++ b/static/css/product-card.css
@@ -1,7 +1,7 @@
 :root{
-  --accent-color: #b34244;
+  --accent-color: #c49b9b;
   --light-text: #fff;
-  --shadow: 0 10px 20px rgba(0,0,0,0.1);
+  --shadow: 0 10px 20px rgba(100, 100, 100, 0.1);
   --transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
